--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -60,6 +60,10 @@
     justify-content: center;
     padding-top: 1em;
 } .project-card > div > div {
+    background-repeat: no-repeat;
+    position: relative;
+    background-position: center;
+    background-size: cover;
     width: 300px;
     border-radius: 20px;
     height: 400px;
@@ -67,10 +71,25 @@
     display: flex;
     padding: 1em 1em;
     align-items: flex-end;
-} .project-card > div > div > div {
+} .overlay > div {
     height: 35%;
+    color: white;
 } .project-card h4 {
     margin-bottom: .5em;
+} .overlay {
+    max-width: 100%;
+    overflow: hidden;
+    top: 0;
+    border-radius: 20px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-height: 100% !important;
+    position: absolute;
+    background-color: rgba(0,0,0,.2);
+    display: flex;
+    padding: 1em 1em;
+    align-items: flex-end;
 }
 
 /* -------------------------------------- */
