--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -1,82 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Wix+Madefor+Display:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300&family=Wix+Madefor+Display:wght@400;500;600;700;800&display=swap');
 @import url('global.css');
 * {
     margin: 0;
-    font-family: 'Inter';
-} h1 {
-    text-align: center;
+    font-family: 'Poppins';
+} .custom-cont {
+    padding: 0 20em;
 }
-.thinking-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 95vh;
-    width: 100%;
-    /* font-family: Algerian; */
-    /* font-family: 'Arabic Ramadhan';   */
-    /* font-family: 'Bradley Hand ITC';   */
-    /* font-family: 'Consolas';   */
-    font-family: 'Courier New';  
-    /* font-family: 'OCR A';   */
-    /* font-family: 'Segoe Script';   */
-} .main-headers {
-    font-size: 36pt;
-    margin-top: -2.2em;
-    color: #575757;
-}.custom-cont {
-    padding: 1em;
-}
-
-/* ------------- Navbar ----------------- */
-
+/* =============== Navbar =================== */
 .header-cont {
-    
-} 
-
-/* -------------------------------------- */
-
-/* -------------- Project ---------------- */
-.project-card {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1em;
-} .project-card > div {
     display: flex;
+    justify-content: space-between;
     align-items: center;
+}.header-cont ul li{
+    height: 5.5em;
+    display: flex;
     justify-content: center;
-    padding-top: 1em;
-} .project-card > div > div {
-    background-repeat: no-repeat;
-    position: relative;
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    border-radius: 20px;
-    height: 400px;
-    border: 8px solid #D9D9D9;
+    align-items: center;
+    list-style-type: none;
+    margin-right: 2em;
+} 
+.header-cont ul{
     display: flex;
-    padding: 1em 1em;
-    align-items: flex-end;
-} .overlay > div {
-    height: 35%;
-    color: white;
-} .project-card h4 {
-    margin-bottom: .5em;
-} .overlay {
-    max-width: 100%;
-    overflow: hidden;
-    top: 0;
-    border-radius: 20px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    max-height: 100% !important;
-    position: absolute;
-    background-color: rgba(0,0,0,.4);
-    display: flex;
-    padding: 1em 1em;
-    align-items: flex-end;
+} .header-cont img {
+    width: 12em;
+} .header-cont > div {
+    background-color: #efefef;
+    padding: 1em 2em;
+    border-radius: 25px;
+    font-weight: bold;
+} .header-cont > div i{
+    margin-left: 1em;
+    font-weight: bold;
 }
 
-/* -------------------------------------- */
+/* =========================================== */
+/* =============== Banner =================== */
+.banner-cont {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+} .banner-cont div{
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    flex-direction: column;
+} .banner-cont h1 {
+    font-size: 50pt;
+    line-height: 85px;
+}.hero-cont {
+    max-width: 450px;
+}.hero-cont p {
+    padding-top: 1em;
+    font-size: 24px;
+} .banner-cont button {
+    align-self: flex-start;
+    margin-top: 1em;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    color: white;
+    background-color: #1b222b;
+    border-radius: 30px;
+    padding: 1em 2em;
+    font-weight: bold;
+} .banner-cont button i {
+    margin-left: 1em;
+    font-weight: bold;
+    font-size: 8pt;
+} .banner-cont img {
+    height: 100%;
+} .banner-cont div:nth-child(2) {
+    width: 100%;
+    overflow: hidden;
+}
+/* =========================================== */
+
