--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -3,8 +3,9 @@
 * {
     margin: 0;
     font-family: 'Poppins';
+    padding: 0;
 } .custom-cont {
-    padding: 0 20em;
+    padding: 0 10em;
 }
 /* =============== Navbar =================== */
 .header-cont {
@@ -76,5 +77,88 @@
     width: 100%;
     overflow: hidden;
 }
+/* =========================================== */
+
+/* =============== Banner =================== */
+.project-cont {
+    display: grid;
+    margin-top: 4em;
+    gap: 5em 0;
+    grid-template-columns: 4fr 1fr;
+}.project-disc{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+} .project-cont img {
+    width: 500px;
+} .project-slogan {
+    background-color: #ffedd7;
+    width: fit-content;
+    padding: .5em 1.5em;
+    font-weight: 300;
+    font-size: 10pt;
+    border-radius: 25px;
+} .project-cont h1 {
+    width: 90%;
+    font-size: 48px;
+    line-height: 50px;
+    margin-top: 10px;
+}.project-disc ul {
+    margin-top: 2em;
+}.project-disc li {
+    font-size: 24px;
+    font-weight: 700;
+    width: 65%;
+    list-style: none;
+    margin-bottom: 1em;
+} .check{
+    float: left;
+    padding: .5em;
+    margin-right: .5em;
+    height: 100%;
+    border: 1px solid rgba(0,0,0,0);
+} .right-list li{
+    width: 100%;
+}
+/* =========================================== */
+
+/* ================== service ================= */
+.service-cont {
+    margin-top: 5em;
+}
+.service-cont h1 {
+    text-align: center;
+    margin-bottom: 1em;
+}.service-cont > div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2em;
+    padding-bottom: 1em;
+} .service-cont > div > div {
+    min-height: 300px;
+    padding: 3em 2em;
+    background-color: #dfede7;
+} .service-cont > div > div a {
+    display: block;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    width: fit-content;
+    border-radius: 25px;
+    margin-top: 1em;
+    padding: 1em;
+
+} .service-cont > div > div a i {
+    margin-left: 1em;
+} 
+.service-cont > div > div p {
+    width: 90%;
+    padding: 1em 0;
+}.service-cont > div > div:nth-child(2) {
+    background-color: #ffedd7;
+} .service-cont >div >div:nth-child(3) {
+    background-color: #bde5fe;
+}
+
 /* =========================================== */
 
