--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -4,8 +4,11 @@
     margin: 0;
     font-family: 'Poppins';
     padding: 0;
+}html {
+    overflow-x: hidden;
 } body {
     overflow-x: hidden;
+    position: relative
 } section {
     width: 100% !important;
 } .custom-cont {
@@ -196,6 +199,9 @@
 /* =========================================== */
 
 /* ================ Testimonial ==================== */
+.testi-cont * {
+    user-select: none;
+}
 .testi-cont > div {
     background-color: #ffeed6;
 
@@ -235,13 +241,17 @@
         text-align: center;
     }
 }
-@media screen and (max-width: 1029px) {
+@media screen and (max-width: 1062px) {
     .header-cont div , .header-cont ul {
         display: none;
     } .burger-menu {
         display: block !important;
         background-color: white !important;
         width: fit-content !important;
+    }.banner-cont {
+        grid-template-columns: auto;
+    } .banner-cont img {
+        display: none;
     }
 }
 @media screen and (max-width: 1178px) {
@@ -254,6 +264,44 @@
         grid-template-columns: auto;
     } .foot-menu {
         margin-top: 2em;
+    }
+}
+@media screen and (max-width: 920px) {
+    .custom-cont {
+        padding: 0 2em;
+    }.banner-cont h1 {
+        font-size: 30pt;
+        line-height: 40px;
+    }.hero-cont p {
+        font-size: 18px;
+    }.banner-cont button {
+        font-size: 10px;
+    } .banner-cont {
+        padding-top: 125px;
+        padding-left: 1em;
+        padding-right: 1em;
+    }  .project-cont h1 {
+        width: 100% !important;
+        font-size: 22px;
+        line-height: 30px;
+    } .project-cont img  {
+        width: 100%;
+    }.project-disc ul {
+        margin-top: 1em;
+        padding-left: 0;
+    }.project-disc li {
+        font-size: 20px;
+        width: 100% !important;
+        margin-left: 0;
+        font-weight: 500;
+    }.project-cont {
+        gap: 1em 0;
+    }.check{
+        padding: .2em;
+    }.footer-cont {
+        padding-top: 5em;
+    }.footer-cont p {
+        width: 100%;
     }
 }
 
