--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -20,9 +20,11 @@
 }
 .header-cont {
     display: flex;
+    position: fixed;
+    background-color: white;
     justify-content: space-between;
     align-items: center;
-    max-width: 100%;
+    width: 100%;
 }.header-cont ul li{
     height: 5.5em;
     display: flex;
@@ -122,6 +124,8 @@
     font-size: 24px;
     font-weight: 700;
     width: 65%;
+    padding-right: 1em;
+    border: 1px solid rgba(0,0,0,0);
     list-style: none;
     margin-bottom: 1em;
 } .check{
@@ -142,6 +146,9 @@
 .service-cont h1 {
     text-align: center;
     margin-bottom: 1em;
+}.service-cont h3 {
+    min-height: 2em;
+    margin-top: .5em;
 }.service-cont > div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -151,6 +158,8 @@
     min-height: 300px;
     padding: 3em 2em;
     background-color: #dfede7;
+    display: flex;
+    flex-direction: column;
 } .service-cont > div > div a {
     display: block;
     background-color: white;
@@ -158,9 +167,9 @@
     text-decoration: none;
     width: fit-content;
     border-radius: 25px;
-    margin-top: 1em;
+    margin-top: auto;
     padding: 1em;
-
+    justify-self: flex-end;
 } .service-cont > div > div a i {
     margin-left: 1em;
 } 
@@ -302,6 +311,8 @@
         padding-top: 5em;
     }.footer-cont p {
         width: 100%;
+    }.testi-cont > div > div > div:nth-child(1) {
+        font-size: 30px;
     }
 }
 
