--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -46,7 +46,27 @@
 } .header-cont > div i{
     margin-left: 1em;
     font-weight: bold;
+}.mobile-nav {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}.mobile-nav ul {
+    padding: 0;
+} .mobile-nav ul li {
+    list-style-type: none;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom:1em;
+} #cross {
+    position: fixed;
+    top: 15px;
+    right: 15%;
 }
+
 
 /* =========================================== */
 /* =============== Banner =================== */
