--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -261,6 +261,76 @@
 
 /* =========================================== */
 
+/* ================== Page Banner ================== */
+
+
+.page-banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60vh;
+    background-position: center;
+    background-size: cover;
+    background-image: url('/uploads/banner.jpg');
+} .page-banner h1 {
+    margin-bottom: 15px;
+    font-size: 50px;
+} .page-banner a {
+    color: black;
+    text-decoration: none;
+} .page-banner span small {
+    font-weight: 200;
+} .blog-cont .blog-filter{
+    display: flex;
+    border-radius: 25px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #efefef;
+    padding: 2.5px 4px;
+    margin-top: 1em;
+} .blog-filter span {
+    min-width: 14em;
+    text-align: center;
+    border-radius: 25px;
+    padding: 1em;
+} .active-filter {
+    background-color: #1b222b;
+    color: white;
+} .blog-body {
+    padding-top: 3em;
+    padding-bottom: 3em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1em;
+} .blog-body > div {
+    background-color: #ffedd7;
+    padding: 1em;
+} .blog-img {
+    height: 200px;
+    width: 100%;
+    border: 1px solid black;
+    overflow: hidden;
+}.blog-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}.blog-cat {
+    padding: .5em 1em;
+    margin: 1em 0;
+    background-color: white;
+    width: fit-content;
+    border-radius: 25px;
+} .blog-desc h4{
+    padding-bottom: 1em;
+} .blog-desc p span.blog-time {
+    float: right;
+}
+
+/* =========================================== */
+
+
+
 
 /* ============== Responsive ==================== */
 @media screen and (max-width: 1188px) {
