--- a/public/Frontend/assets/custom.css
+++ b/public/Frontend/assets/custom.css
@@ -133,13 +133,20 @@
     margin-top: 4em;
     gap: 5em 0;
     grid-template-columns: 4fr 1fr;
-}.project-disc{
+}.project-cont .custom-btn {
+    width: fit-content;
+}
+.project-disc{
     display: flex;
     flex-direction: column;
     justify-content: center;
-} .project-cont img {
+}  .img-div {
     width: 500px;
-} .project-slogan {
+}.img-div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}.project-slogan {
     background-color: #ffedd7;
     width: fit-content;
     padding: .5em 1.5em;
@@ -416,6 +423,15 @@
 } textarea {
     resize: none;
     height: 200px;
+}
+
+/* =========================================== */
+
+/* =============== About Us ================= */
+
+.about-cont {
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 /* =========================================== */
